--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 version: '3'
 
 services:
-  # Development service
-  dev:
+  app:
     build:
       context: .
-      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
@@ -13,16 +11,6 @@ services:
       - /app/node_modules
       - /app/.next
     environment:
-      - NODE_ENV=development
-    command: npm run dev
-
-  # Production service
-  prod:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    environment:
       - NODE_ENV=production
-    restart: unless-stopped 
+    restart: unless-stopped
+    command: node .next/standalone/server.js 
