--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "axios": "^1.9.0",
     "axios-mock-adapter": "^2.1.0",
     "class-variance-authority": "^0.7.1",
