--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/sqlite3": "^3.1.11",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "eslint-plugin-react-you-might-not-need-an-effect": "^0.0.42",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
