--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,17 +4,13 @@ on:
   push:
     branches: [ main, master ]
     tags: [ 'v*' ]  # Trigger on version tags like v1.0.0
-    paths:
-      - 'app/**'
-      - 'components/**'
-      - 'lib/**'
-      - 'types/**'
-      - 'public/**'
-      - 'package.json'
-      - 'package-lock.json'
-      - 'Dockerfile'
-      - 'next.config.ts'
-      - 'tsconfig.json'
+    paths-ignore:
+      - '.github/**'
+      - '.vscode/**'
+      - '*.md'
+      - 'LICENSE'
+      - '.gitignore'
+      - '.eslintrc*'
   workflow_dispatch:
 
 jobs:
@@ -41,20 +37,48 @@ jobs:
         echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "📦 Package version: $VERSION"
 
+    - name: Check if this is a version tag push
+      id: check-tag
+      run: |
+        if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+          echo "is_version_tag=true" >> $GITHUB_OUTPUT
+          echo "tag_version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+          echo "✅ This is a version tag push"
+        else
+          echo "is_version_tag=false" >> $GITHUB_OUTPUT
+          echo "ℹ️ This is a regular push"
+        fi
+
+    - name: Verify version match (only for version tags)
+      if: steps.check-tag.outputs.is_version_tag == 'true'
+      run: |
+        PACKAGE_VERSION="${{ steps.package-version.outputs.version }}"
+        TAG_VERSION="${{ steps.check-tag.outputs.tag_version }}"
+        if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
+          echo "❌ ERROR: package.json version ($PACKAGE_VERSION) doesn't match tag version ($TAG_VERSION)"
+          exit 1
+        fi
+        echo "✅ Version match confirmed"
+
     - name: Extract metadata
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: mhaowork/warrantywatcher
         tags: |
+          # For branch pushes (main/master)
           type=ref,event=branch
           type=ref,event=pr
+          # 'latest' tag only for main branch
           type=raw,value=latest,enable={{is_default_branch}}
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}
-          type=semver,pattern={{major}}
-          type=raw,value=${{ steps.package-version.outputs.version }}
-          type=sha,prefix={{branch}}-
+          # Version tags only when pushing git tags
+          type=semver,pattern={{version}},enable=${{ steps.check-tag.outputs.is_version_tag == 'true' }}
+          type=semver,pattern={{major}}.{{minor}},enable=${{ steps.check-tag.outputs.is_version_tag == 'true' }}
+          type=semver,pattern={{major}},enable=${{ steps.check-tag.outputs.is_version_tag == 'true' }}
+          # Package version tag only for version tag pushes
+          type=raw,value=${{ steps.package-version.outputs.version }},enable=${{ steps.check-tag.outputs.is_version_tag == 'true' }}
+          # Branch-specific tags with SHA for non-version pushes
+          type=sha,prefix={{branch}}-,enable=${{ steps.check-tag.outputs.is_version_tag != 'true' }}
         labels: |
           org.opencontainers.image.title=WarrantyWatcher
           org.opencontainers.image.description=Warranty tracking and management system
@@ -78,6 +102,14 @@ jobs:
         echo "📦 Available tags:"
         echo "${{ steps.meta.outputs.tags }}"
         echo ""
-        echo "🚀 Users can now pull with:"
-        echo "docker pull mhaowork/warrantywatcher:latest"
-        echo "docker pull mhaowork/warrantywatcher:${{ steps.package-version.outputs.version }}" 
+        if [ "${{ steps.check-tag.outputs.is_version_tag }}" == "true" ]; then
+          echo "🎉 Version Release: ${{ steps.package-version.outputs.version }}"
+          echo "🚀 Users can now pull with:"
+          echo "docker pull mhaowork/warrantywatcher:latest"
+          echo "docker pull mhaowork/warrantywatcher:${{ steps.package-version.outputs.version }}"
+        else
+          echo "🔧 Development Build"
+          echo "🚀 Users can pull with:"
+          echo "docker pull mhaowork/warrantywatcher:latest"
+          echo "docker pull mhaowork/warrantywatcher:main-${GITHUB_SHA::8}"
+        fi
