--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-config-next": "15.3.1",
     "eslint-plugin-react-you-might-not-need-an-effect": "^0.0.42",
     "tailwindcss": "^4",
+    "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
