--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stress-test": "tsx scripts/stress-test-devices.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -26,6 +27,7 @@
     "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
