saas: add saas mode

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.11",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "NEXT_PUBLIC_DEPLOYMENT_MODE=self-hosted next dev --turbopack",
+    "dev:saas": "NEXT_PUBLIC_DEPLOYMENT_MODE=saas next dev --turbopack",
+    "build": "NEXT_PUBLIC_DEPLOYMENT_MODE=self-hosted next build",
+    "build:saas": "NEXT_PUBLIC_DEPLOYMENT_MODE=saas next build",
     "start": "next start",
     "lint": "next lint",
     "stress-test": "tsx scripts/stress-test-devices.ts"
@@ -21,6 +23,8 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.9.0",
     "axios-mock-adapter": "^2.1.0",
     "class-variance-authority": "^0.7.1",
@@ -29,9 +33,11 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "nuqs": "^2.4.3",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "server-only": "^0.0.1",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
@@ -41,6 +47,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.11.12",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sqlite3": "^3.1.11",
