--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
       - "${HOST_PORT:-3000}:3000"  # Use HOST_PORT env var, default to 3000
     volumes:
