--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "^15.3.6",
     "nuqs": "^2.4.3",
     "pg": "^8.13.1",
     "react": "^19.0.0",
@@ -53,7 +53,7 @@
     "@types/react-dom": "^19",
     "@types/sqlite3": "^3.1.11",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "15.3.6",
     "eslint-plugin-react-you-might-not-need-an-effect": "^0.0.42",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
